Fixed dark mode

--- a/common/common.scss
+++ b/common/common.scss
@@ -356,7 +356,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
 	border-radius: 10px;
 	box-shadow: 0 8px 60px 0 rgba(103,151,255,0.1),0 12px 90px 0 rgba(133,255,103,0.1);
 	padding: 2em;
-	/* background-color: revert; */
+	background-color: revert;
 	border-top: 8px solid #82c3b5;
 	margin-top: .8em;
 }
